PostProcess scanlines! and it doesn't break

--- a/Source/Application/Application.vcxproj
+++ b/Source/Application/Application.vcxproj
@@ -168,6 +168,8 @@
     <ClInclude Include="World07.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Build\Assets\Materials\cel.mtrl" />
+    <None Include="..\..\Build\Assets\Materials\cel_shader.mtrl" />
     <None Include="..\..\Build\Assets\Materials\framebuffer.mtrl" />
     <None Include="..\..\Build\Assets\Materials\grid.mtrl" />
     <None Include="..\..\Build\Assets\Materials\multi.mtrl" />
@@ -181,8 +183,11 @@
     <None Include="..\..\Build\Assets\Materials\sprite.mtrl" />
     <None Include="..\..\Build\Assets\Materials\squirrel.mtrl" />
     <None Include="..\..\Build\Assets\Materials\tree.mtrl" />
+    <None Include="..\..\Build\Assets\Materials\ui_light.mtrl" />
     <None Include="..\..\Build\Assets\Scenes\scene.json" />
+    <None Include="..\..\Build\Assets\Scenes\scene_celshading.json" />
     <None Include="..\..\Build\Assets\Scenes\scene_framebuffer.json" />
+    <None Include="..\..\Build\Assets\Scenes\scene_shadowmapping.json" />
     <None Include="..\..\Build\Assets\Shaders\cubemap.frag" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong.frag" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong.prog" />
