--- a/Source/Application/Application.vcxproj.filters
+++ b/Source/Application/Application.vcxproj.filters
@@ -125,7 +125,7 @@
     <None Include="..\..\Build\Assets\Materials\refraction.mtrl">
       <Filter>Materials</Filter>
     </None>
-    <None Include="..\..\Build\Assets\Materials\shrek.mtrl">
+    <None Include="..\..\Build\Assets\Materials\ogre.mtrl">
       <Filter>Materials</Filter>
     </None>
     <None Include="..\..\Build\Assets\Materials\skybox.mtrl">
@@ -265,6 +265,15 @@
     </None>
     <None Include="..\..\Build\Assets\Shaders\lit_texture.prog">
       <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Materials\basic.mtrl">
+      <Filter>Materials</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Materials\ui_camera.mtrl">
+      <Filter>Materials</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Scenes\scene_editor.json">
+      <Filter>Scenes</Filter>
     </None>
   </ItemGroup>
 </Project>
